--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
         <p class="idea-4">Nhưng mà...</p>
         <p class="idea-5">
-          Em là đặc biệt và xinh xẵn nhất giữa 7 tỉ người rồi 
+          Em là đặc biệt và xinh xắn nhất giữa 7 tỉ người rồi 
           <span>:)</span>
         </p>
         <p class="idea-6">
